# isp-skeletons

./: build.sh
bisect/: CMakeLists.txt  bisect.cxx
cxxopts/: CMakeLists.txt
gridpoint/: CMakeLists.txt
if/: CMakeLists.txt  if.cxx
ijloop/: CMakeLists.txt
linkshared/: CMakeLists.txt
matrix/: CMakeLists.txt
mult/: CMakeLists.txt
newton/: CMakeLists.txt  newton.cxx
pointclass/: CMakeLists.txt
pointrectangle/: CMakeLists.txt
quadtest/: CMakeLists.txt
queentest/: CMakeLists.txt
shortvector/: CMakeLists.txt
stream/: CMakeLists.txt
sumsquares/: CMakeLists.txt
tdd/: CMakeLists.txt
